# Kagolist

./: .gitignore  DESIGN.md  LICENSE  README.md
kagolist/: Cargo.toml
kagolist/src/: entity.rs  main.rs
kagolist/src/items/: dto.rs  error.rs  handlers.rs
kagolist/src/migrations/: m20260721_102416_create_items.rs  mod.rs
