[package]
name = "kagolist"
version = "0.1.0"
edition = "2024"

[dependencies]
rapina = { version = "0.13.0", features = ["sqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.20", features = ["derive"] }
